@@ -17,12 +17,12 @@ body { margin-top: 20px !important; }
 /* all lists */
 #admin_menu, #admin_menu ul { padding: 0; margin: 0; list-style: none; line-height: 1.4em; z-index: 999; }
 #admin_menu ul { position: static; }
-#admin_menu ul a { display: block; border-right: 1px solid #323232; padding: 4px 8px; font-weight: normal; color: #f0f0f0; text-decoration: none; text-align: left; }
+#admin_menu ul a { display: block; border-right: 1px solid #323232; border-bottom: none; padding: 4px 8px; font-weight: normal; color: #f0f0f0; text-decoration: none; text-align: left; }
 #admin_menu li li a { border-right: none; border-top: 1px solid #323232; }
 
 /* all list items */
 /* width needed or else Opera goes nuts */
-#admin_menu li { float: left; height: 100%; margin: 0 !important; padding: 0; list-style-image: none; background-image: none; }
+#admin_menu li { float: left; height: 100%; margin: 0 !important; padding: 0; list-style-image: none; list-style-type: none; background-image: none; }
 #admin_menu li li { width: 160px; background: #202020; filter:Alpha(opacity=88); opacity: 0.88; }
 
 /* second-level lists */
