@@ -257,6 +257,9 @@ function admin_menu_item_link(&$admin_items, $mid) {
     $item['title'] = $item['title'] . ' (' . $mid . ')';
   }
   
+  // Remove menu item tooltips due to mouseover clashes.
+  unset($item['description']);
+  
   return theme('menu_item_link', $item, $link_item);
 }
 
