@@ -4,6 +4,10 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 ------------------------------
 
 
+Admin Menu 5.x-1.x, xxxx-xx-xx
+------------------------------
+#177582 by sun: Fixed bluebreeze theme compatibility.
+
 
 Admin Menu 5.x-1.0, 2007-09-06
 ------------------------------
